2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtems/libio.h: Removed file_info and handlers
	fields in rtems_libio_t.
	* libcsupport/src/close.c, libcsupport/src/fcntl.c,
	libcsupport/src/fdatasync.c, libcsupport/src/fstat.c,
	libcsupport/src/fsync.c, libcsupport/src/ftruncate.c,
	libcsupport/src/getdents.c, libcsupport/src/ioctl.c,
	libcsupport/src/libio_sockets.c, libcsupport/src/lseek.c,
	libcsupport/src/open.c, libcsupport/src/read.c,
	libcsupport/src/readv.c, libcsupport/src/write.c,
	libcsupport/src/writev.c, libfs/src/devfs/devclose.c,
	libfs/src/devfs/devioctl.c, libfs/src/devfs/devopen.c,
	libfs/src/devfs/devread.c, libfs/src/devfs/devwrite.c
	libfs/src/dosfs/msdos_dir.c libfs/src/dosfs/msdos_file.c
	libfs/src/imfs/deviceio.c libfs/src/imfs/imfs_directory.c
	libfs/src/imfs/imfs_fifo.c libfs/src/imfs/memfile.c
	libfs/src/nfsclient/src/nfs.c libfs/src/rfs/rtems-rfs-rtems-file.c
	libfs/src/rfs/rtems-rfs-rtems.h libnetworking/lib/ftpfs.c: Reflect
	changes above.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/devfs/devfs.h, libfs/src/devfs/devfs_node_type.c: Fixed
	devFS_node_type() prototype.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/include/rtems/seterr.h: Include <errno.h>.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtems/libio.h: Changed
	rtems_filesystem_node_types_t to an enum.  Declare
	rtems_filesystem_handlers_default,
	rtems_filesystem_operations_default,
	rtems_filesystem_default_evalpath(),
	rtems_filesystem_default_evalformake, and
	rtems_filesystem_default_node_type().
	* libfs/src/dosfs/msdos.h: Fixed msdos_node_type() prototype.
	* libfs/src/defaults/default_evalformake.c,
	libfs/src/defaults/default_handlers.c,
	libfs/src/defaults/default_node_type.c,
	libfs/src/defaults/default_ops.c: New files.
	* libfs/Makefile.am: Reflect changes above.

2010-07-14	Joel Sherrill <joel.sherrill@oarcorp.com>
