@@ -37,7 +37,6 @@ extern "C" {
 #define RTEMS_LIBIO_IOP_SEM(n)  rtems_build_name('L', 'B', 'I', n)
 
 extern rtems_id                          rtems_libio_semaphore;
-extern const rtems_filesystem_file_handlers_r rtems_filesystem_null_handlers;
 
 /*
  *  File descriptor Table Information
